--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-alpha1",
     "jquery": "^3.6.0",
-    "mdb-ui-kit": "^3.4.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.4.0",
