--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-alpha1",
     "jquery": "^3.6.0",
+    "mdb-ui-kit": "^3.5.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
+    "redux": "^4.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
