--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "coloc-meet",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.16.1"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
