--- a/package.json
+++ b/package.json
@@ -6,27 +6,17 @@
   },
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.0-alpha1",
-    "jquery": "^3.6.0",
     "mdb-ui-kit": "^3.5.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-spinners": "^0.10.6",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
