--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.0.9",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "styled-components": "^5.3.0",
+    "toastr": "^2.1.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
