--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mdb-ui-kit": "^3.5.0",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
